--- a/ui/kamehamedraw/package.json
+++ b/ui/kamehamedraw/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/socket.io": "^3.0.2",
     "@vercel/speed-insights": "^1.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
